--- a/Vlasov-Maxwell_Spectral_Solver-main/requirements.txt
+++ b/Vlasov-Maxwell_Spectral_Solver-main/requirements.txt
@@ -1,6 +1,7 @@
-jax>=0.4.10
-jaxlib>=0.4.10
-matplotlib>=3.7.1
-scipy>=1.11.0
-diffrax>=0.5.1
-functools32>=3.2.3.post2
+diffrax>=0.6.2
+jax>=0.5.0
+jaxlib>=0.5.0
+matplotlib>=3.10.1
+scipy>=1.15.2
+pandas>=2.2.3
+
